INT-8008: stop quiz edit menu text from wrapping
Bonus fix, stop the question name and description from being cut off

--- a/style/editor.css
+++ b/style/editor.css
@@ -5977,6 +5977,13 @@ ul.events-new + ul.events-underway {
 #page-mod-quiz-edit div.reorder div.question div.content {
   width: calc(100% - 4.3em);
 }
+#page-mod-quiz-edit .menu-action-text,
+#page-mod-quiz-edit .toggle-display.textmenu {
+  white-space: nowrap;
+}
+#page-mod-quiz-edit ul.slots .activityinstance span.instancename {
+  overflow: visible;
+}
 @media screen and (min-width: 992px) {
   #page-mod-quiz-edit div.quizcontents,
   .questionbankwindow.block {
